Basic framework for pages, light / dark theme stylesheet

--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "AutoLogout-Manager",
-    "slug": "AutoLogout-Manager",
-    "version": "1.0.0",
+    "name": "AutoLogout Manager",
+    "slug": "autologoutmanager",
+    "version": "0.0.1",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "autologoutmanager",
