--- a/app.json
+++ b/app.json
@@ -17,7 +17,22 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.yiays.autologoutmanager"
+      "package": "com.yiays.autologoutmanager",
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "autoVerify": true,
+          "data": {
+            "scheme": "https",
+            "host": "autologout.yiays.com",
+            "pathPrefix": "/app/"
+          },
+          "category": [
+            "BROWSABLE",
+            "DEFAULT"
+          ]
+        }
+      ]
     },
     "web": {
       "bundler": "metro",
