--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "expo start",
     "openapi-codegen": "openapi --input https://timelimit-sync.yiays.workers.dev/openapi.json --output ./api-client --client fetch",
     "android": "expo run:android",
+    "build-android": "cd android & gradlew app:bundleRelease",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
